fixed missing link in privacy policy, header, and link spacing for final touches

--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -1,5 +1,5 @@
 .hero {
-    background-position: bottom;
+    background-position: 80%;
     height: auto;
     text-align: center;
     margin-bottom: 40px;
